ZCS-14795: added translation for label ERROR_FEATURE_NOT_LICENSED

--- a/WebRoot/messages/ZaMsg_ca.properties
+++ b/WebRoot/messages/ZaMsg_ca.properties
@@ -2802,3 +2802,4 @@ LBL_zimbraSieveEditHeaderEnabled = Edita les ordres de la cap\u00e7alera:
 LBL_zimbraSieveRejectMailEnabled = Acci\u00f3 de "rebutjar" del tamís:
 NAD_AdminSieveGrouper = Regles de filtre de garbell
 NAD_LegalInterceptGrouper = Interceptaci\u00f3 legal
+ERROR_FEATURE_NOT_LICENSED = Actualment no teniu llic\u00e8ncia per a aquesta funci\u00f3.<br><br> Per obtenir m\u00e9s informaci\u00f3, consulteu Configuraci\u00f3 - Configuraci\u00f3 global - Llic\u00e8ncia.
