--- a/WebRoot/messages/ZaMsg_da.properties
+++ b/WebRoot/messages/ZaMsg_da.properties
@@ -2712,3 +2712,4 @@ LBL_zimbraSieveEditHeaderEnabled = Rediger overskriftskommandoer:
 LBL_zimbraSieveRejectMailEnabled = Sigt "afvis" handling:
 NAD_AdminSieveGrouper = Si filter regler
 NAD_LegalInterceptGrouper = Juridisk aflytning
+ERROR_FEATURE_NOT_LICENSED = Du har i \u00f8jeblikket ikke licens til denne funktion.<br><br> Se venligst Konfigurer - Globale indstillinger - Licens for mere information.
