--- a/WebRoot/messages/ZaMsg_de.properties
+++ b/WebRoot/messages/ZaMsg_de.properties
@@ -2776,3 +2776,4 @@ LBL_zimbraSieveEditHeaderEnabled = Header-Befehle bearbeiten:
 LBL_zimbraSieveRejectMailEnabled = Aktion "Ablehnen" des Siebs:
 NAD_AdminSieveGrouper = Siebfilterregeln
 NAD_LegalInterceptGrouper = Rechtliches Abfangen
+ERROR_FEATURE_NOT_LICENSED = Sie verf\u00fcgen derzeit nicht \u00fcber eine Lizenz f\u00fcr diese Funktion.<br><br> Weitere Informationen finden Sie unter Konfigurieren – Globale Einstellungen – Lizenz.
