--- a/WebRoot/messages/ZaMsg_eu.properties
+++ b/WebRoot/messages/ZaMsg_eu.properties
@@ -2803,3 +2803,4 @@ LBL_zimbraSieveEditHeaderEnabled = Editatu goiburuko komandoak:
 LBL_zimbraSieveRejectMailEnabled = Bahe "baztertu" ekintza:
 NAD_AdminSieveGrouper = Bahe-iragazkien arauak
 NAD_LegalInterceptGrouper = Legezko atzematea
+ERROR_FEATURE_NOT_LICENSED = Une honetan ez duzu funtzio honetarako lizentziarik.<br><br> Informazio gehiago lortzeko, ikusi Konfiguratu - Ezarpen orokorrak - Lizentzia.
