--- a/WebRoot/messages/ZaMsg_hr.properties
+++ b/WebRoot/messages/ZaMsg_hr.properties
@@ -2824,3 +2824,4 @@ LBL_zimbraSieveEditHeaderEnabled = Naredbe za ure\u0111ivanje zaglavlja:
 LBL_zimbraSieveRejectMailEnabled = Radnja "odbacivanja" sita:
 NAD_AdminSieveGrouper = Pravila filtera sita
 NAD_LegalInterceptGrouper = Pravno presretanje
+ERROR_FEATURE_NOT_LICENSED = Trenutno nemate licencu za ovu zna\u010dajku.<br><br> Za vi\u0161e informacija pogledajte Konfiguracija - Globalne postavke - Licenca.
