--- a/WebRoot/messages/ZaMsg_it.properties
+++ b/WebRoot/messages/ZaMsg_it.properties
@@ -2702,7 +2702,7 @@ ERROR_InvalidRPLifetime = L\u2019intervallo deve essere indicato da un numero in
 ERROR_RPExists = Il criterio "{0}" esiste gi\u00e0.
 multiple_servers = pi\u00f9 server
 ERROR_INVALID_FILE_NAME = Nome file non valido. Usa il pulsante Sfoglia per selezionare un file valido.
-
+ERROR_FEATURE_NOT_LICENSED = Al momento non disponi di una licenza per questa funzionalit\u00e0.<br><br> Per ulteriori informazioni, consulta Configura - Impostazioni globali - Licenza.
 Alert_Sieve = Queste regole del filtro Sieve possono essere visualizzate e modificate solo dagli amministratori.
 LBL_zimbraAdminSieveScriptAfter = Regole del setaccio applicate dopo i filtri dell'utente finale:
 LBL_zimbraAdminSieveScriptBefore = Regole del setaccio applicate prima dei filtri dell'utente finale:
