--- a/WebRoot/messages/ZaMsg_nl.properties
+++ b/WebRoot/messages/ZaMsg_nl.properties
@@ -2712,3 +2712,4 @@ LBL_zimbraSieveEditHeaderEnabled = Koptekstopdrachten bewerken:
 LBL_zimbraSieveRejectMailEnabled = Zeef "weigeren" actie:
 NAD_AdminSieveGrouper = Zeeffilter regels
 NAD_LegalInterceptGrouper = Juridische onderschepping
+ERROR_FEATURE_NOT_LICENSED = U heeft momenteel geen licentie voor deze functie.<br><br> Zie Configureren - Algemene instellingen - Licentie voor meer informatie.
