--- a/WebRoot/messages/ZaMsg_no.properties
+++ b/WebRoot/messages/ZaMsg_no.properties
@@ -2817,3 +2817,4 @@ LBL_zimbraSieveEditHeaderEnabled = Rediger overskriftskommandoer:
 LBL_zimbraSieveRejectMailEnabled = Sil "avvis" handling:
 NAD_AdminSieveGrouper = Sikt filter regler
 NAD_LegalInterceptGrouper = Juridisk avskj\u00e6ring
+ERROR_FEATURE_NOT_LICENSED = Du er for \u00f8yeblikket ikke lisensiert for denne funksjonen.<br><br> Se Konfigurer - Globale innstillinger - Lisens for mer informasjon.
