--- a/WebRoot/messages/ZaMsg_sv.properties
+++ b/WebRoot/messages/ZaMsg_sv.properties
@@ -2712,3 +2712,4 @@ LBL_zimbraSieveEditHeaderEnabled = Redigera rubrikkommandon:
 LBL_zimbraSieveRejectMailEnabled = Sikta "avvisa" \u00e5tg\u00e4rd:
 NAD_AdminSieveGrouper = Siktfilterregler
 NAD_LegalInterceptGrouper = Juridisk avlyssning
+ERROR_FEATURE_NOT_LICENSED = Du \u00e4r f\u00f6r n\u00e4rvarande inte licensierad f\u00f6r den h\u00e4r funktionen.<br><br> Se Konfigurera - Globala inst\u00e4llningar - Licens f\u00f6r mer information.
