--- a/WebRoot/messages/ZaMsg_zh_CN.properties
+++ b/WebRoot/messages/ZaMsg_zh_CN.properties
@@ -2797,3 +2797,4 @@ LBL_zimbraSieveEditHeaderEnabled = \u7f16\u8f91\u6807\u9898\u547d\u4ee4\uff1a
 LBL_zimbraSieveRejectMailEnabled = \u7b5b\u9009\u201c\u5254\u9664\u201d\u52a8\u4f5c\uff1a
 NAD_AdminSieveGrouper = \u7b5b\u7f51\u8fc7\u6ee4\u89c4\u5219
 NAD_LegalInterceptGrouper = \u5408\u6cd5\u62e6\u622a
+ERROR_FEATURE_NOT_LICENSED = \u60a8\u5f53\u524d\u6ca1\u6709\u83b7\u5f97\u6b64\u529f\u80fd\u7684\u8bb8\u53ef\u3002\u003c\u0062\u0072\u003e\u003c\u0062\u0072\u003e\u8bf7\u53c2\u9605\u914d\u7f6e \u002d \u5168\u5c40\u8bbe\u7f6e \u002d \u8bb8\u53ef\u8bc1\u4ee5\u4e86\u89e3\u66f4\u591a\u4fe1\u606f\u3002
