--- a/WebRoot/messages/ZaMsg_zh_TW.properties
+++ b/WebRoot/messages/ZaMsg_zh_TW.properties
@@ -2810,3 +2810,4 @@ LBL_zimbraSieveEditHeaderEnabled = \u7de8\u8f2f\u6a19\u984c\u547d\u4ee4\uff1a
 LBL_zimbraSieveRejectMailEnabled = \u7be9\u9078\u201c\u5254\u9664\u201d\u52d5\u4f5c\uff1a
 NAD_AdminSieveGrouper = \u7be9\u7db2\u904e\u6ffe\u898f\u5247
 NAD_LegalInterceptGrouper = \u5408\u6cd5\u6514\u622a
+ERROR_FEATURE_NOT_LICENSED = \u60a8\u76ee\u524d\u6c92\u6709\u7372\u5f97\u6b64\u529f\u80fd\u7684\u8a31\u53ef\u3002\u003c\u0062\u0072\u003e\u003c\u0062\u0072\u003e\u8acb\u53c3\u95b1\u914d\u7f6e \u002d \u5168\u57df\u8a2d\u5b9a \u002d \u8a31\u53ef\u8b49\u4ee5\u4e86\u89e3\u66f4\u591a\u8cc7\u8a0a\u3002
