--- a/WebRoot/messages/ZaMsg_es.properties
+++ b/WebRoot/messages/ZaMsg_es.properties
@@ -2786,3 +2786,4 @@ LBL_zimbraSieveEditHeaderEnabled = Editar comandos de encabezado:
 LBL_zimbraSieveRejectMailEnabled = Acci\u00f3n de "rechazo" del tamiz:
 NAD_AdminSieveGrouper = Reglas de filtro de tamiz
 NAD_LegalInterceptGrouper = Intercepci\u00f3n legal
+ERROR_FEATURE_NOT_LICENSED = Actualmente no tiene licencia para esta funci\u00f3n.<br><br> Consulte Configurar - Configuraci\u00f3n global - Licencia para obtener m\u00e1s informaci\u00f3n.
