--- a/WebRoot/messages/ZaMsg_sl.properties
+++ b/WebRoot/messages/ZaMsg_sl.properties
@@ -2812,3 +2812,4 @@ LBL_zimbraSieveEditHeaderEnabled = Ukazi za urejanje glave:
 LBL_zimbraSieveRejectMailEnabled = Dejanje "zavrnitve" sita:
 NAD_AdminSieveGrouper = Pravila sitastega filtra
 NAD_LegalInterceptGrouper = Pravni intercept
+ERROR_FEATURE_NOT_LICENSED = \u0054\u0072\u0065\u006e\u0075\u0074\u006e\u006f \u006e\u0069\u006d\u0061\u0074\u0065 \u006c\u0069\u0063\u0065\u006e\u0063\u0065 \u007a\u0061 \u0074\u006f \u0066\u0075\u006e\u006b\u0063\u0069\u006a\u006f\u002e\u003c\u0062\u0072\u003e\u003c\u0062\u0072\u003e \u005a\u0061 \u0076\u0065\u010d \u0069\u006e\u0066\u006f\u0072\u006d\u0061\u0063\u0069\u006a \u0067\u006c\u0065\u006a\u0074\u0065 \u004b\u006f\u006e\u0066\u0069\u0067\u0075\u0072\u0061\u0063\u0069\u006a\u0061 \u2013 \u0047\u006c\u006f\u0062\u0061\u006c\u006e\u0065 \u006e\u0061\u0073\u0074\u0061\u0076\u0069\u0074\u0076\u0065 \u2013 \u004c\u0069\u0063\u0065\u006e\u0063\u0061\u002e
