--- a/WebRoot/messages/ZaMsg_tr.properties
+++ b/WebRoot/messages/ZaMsg_tr.properties
@@ -2806,3 +2806,4 @@ LBL_zimbraSieveEditHeaderEnabled = Ba\u015fl\u0131k komutlar\u0131n\u0131 d\u00f
 LBL_zimbraSieveRejectMailEnabled = Elek "reddetme" eylemi:
 NAD_AdminSieveGrouper = Elek filtre kurallar\u0131
 NAD_LegalInterceptGrouper = Yasal Durdurma
+ERROR_FEATURE_NOT_LICENSED = \u015e\u0075 \u0061\u006e\u0064\u0061 \u0062\u0075 \u00f6\u007a\u0065\u006c\u006c\u0069\u006b \u0069\u00e7\u0069\u006e \u006c\u0069\u0073\u0061\u006e\u0073\u006c\u0131 \u0064\u0065\u011f\u0069\u006c\u0073\u0069\u006e\u0069\u007a\u002e\u003c\u0062\u0072\u003e\u003c\u0062\u0072\u003e \u0044\u0061\u0068\u0061 \u0066\u0061\u007a\u006c\u0061 \u0062\u0069\u006c\u0067\u0069 \u0069\u00e7\u0069\u006e \u006c\u00fc\u0074\u0066\u0065\u006e \u0059\u0061\u0070\u0131\u006c\u0061\u006e\u0064\u0131\u0072 \u002d \u0047\u0065\u006e\u0065\u006c \u0041\u0079\u0061\u0072\u006c\u0061\u0072 \u002d \u004c\u0069\u0073\u0061\u006e\u0073 \u0062\u00f6\u006c\u00fc\u006d\u00fc\u006e\u0065 \u0062\u0061\u006b\u0131\u006e\u002e
