--- a/WebRoot/messages/ZaMsg_zh_HK.properties
+++ b/WebRoot/messages/ZaMsg_zh_HK.properties
@@ -2727,3 +2727,4 @@ LBL_zimbraSieveEditHeaderEnabled = \u7de8\u8f2f\u6a19\u984c\u547d\u4ee4\uff1a
 LBL_zimbraSieveRejectMailEnabled = \u7be9\u9078\u201c\u5254\u9664\u201d\u52d5\u4f5c\uff1a
 NAD_AdminSieveGrouper = \u7be9\u7db2\u904e\u6ffe\u898f\u5247
 NAD_LegalInterceptGrouper = \u5408\u6cd5\u6514\u622a
+ERROR_FEATURE_NOT_LICENSED = \u60a8\u5f53\u524d\u6ca1\u6709\u83b7\u5f97\u6b64\u529f\u80fd\u7684\u8bb8\u53ef\u3002\u003c\u0062\u0072\u003e\u003c\u0062\u0072\u003e\u8bf7\u53c2\u9605\u914d\u7f6e \u002d \u5168\u5c40\u8bbe\u7f6e \u002d \u8bb8\u53ef\u8bc1\u4ee5\u4e86\u89e3\u66f4\u591a\u4fe1\u606f\u3002
