ZCS-14646: added TFA email method support

--- a/WebRoot/messages/ZaMsg_ca.properties
+++ b/WebRoot/messages/ZaMsg_ca.properties
@@ -2087,6 +2087,15 @@ enterNewPassword = Introdu\u00efu una contrasenya nova i torneu a introduir-la a
 twoFactorCodeTitle = Utilitzant l\u2019autenticaci\u00f3 de dos factors
 twoFactorCodeLabel = Codi
 twoFactorCodeButton = Verifiqueu
+twoFactorAuthResendEmail = Torna a enviar un codi per correu electr\u00f2nic
+twoFactorAuthResendEmailDone = Codi resentit.
+twoFactorAuthChooseMethod_app = Far\u00e9 servir l\u2019aplicaci\u00f3 d\u2019autenticaci\u00f3 al meu tel\u00e8fon
+twoFactorAuthChooseMethod_email = Envieu el codi segur a
+twoFactorAuthChooseMethodBack = Enrere
+twoFactorAuthChooseOtherMethod = Utilitzeu un altre m\u00e8tode
+twoFactorAuthChooseOtherMethodDescription = Si us plau, trieu un m\u00e8tode.
+twoFactorAuthSendTFACodeFailed_app = No s\u2019ha pogut inicialitzar el codi de dos factors. Si us plau, intenteu iniciar sessi\u00f3 de nou amb el nom d\u2019usuari i la contrasenya.
+twoFactorAuthSendTFACodeFailed_email = No s\u2019ha pogut enviar el codi de dos factors a la vostra adre\u00e7a de correu electr\u00f2nic configurada. Si us plau, intenteu iniciar sessi\u00f3 de nou amb el nom d\u2019usuari i la contrasenya.
 
 goToServers = Administra servidors
 goToGlobalSettings = Administra la configuraci\u00f3 general
