--- a/WebRoot/messages/ZaMsg_da.properties
+++ b/WebRoot/messages/ZaMsg_da.properties
@@ -2028,6 +2028,15 @@ enterNewPassword = Indtast en ny adgangskode og indtast den igen i bekr\u00e6fte
 twoFactorCodeTitle = Brug af tofaktorautentificering
 twoFactorCodeLabel = Kode
 twoFactorCodeButton = Verificere
+twoFactorAuthResendEmail = Send en kode igen via e-mail
+twoFactorAuthResendEmailDone = Koden sendes igen.
+twoFactorAuthChooseMethod_app = Jeg vil bruge godkendelsesappen p\u00e5 min telefon
+twoFactorAuthChooseMethod_email = Send sikker kode til
+twoFactorAuthChooseMethodBack = Tilbage
+twoFactorAuthChooseOtherMethod = Brug en anden metode
+twoFactorAuthChooseOtherMethodDescription = V\u00e6lg venligst en metode.
+twoFactorAuthSendTFACodeFailed_app = Tofaktorkode kunne ikke initialiseres. Pr\u00f8v at logge ind med brugernavn og adgangskode igen.
+twoFactorAuthSendTFACodeFailed_email = Tofaktorkode kunne ikke sendes til din konfigurerede e-mailadresse. Pr\u00f8v venligst at logge ind med brugernavn og adgangskode igen.
 
 goToServers = Administrer servere
 goToGlobalSettings = Administrer globale indstillinger
