--- a/WebRoot/messages/ZaMsg_de.properties
+++ b/WebRoot/messages/ZaMsg_de.properties
@@ -2058,6 +2058,15 @@ enterNewPassword = Bitte geben Sie ein neues Passwort ein und wiederholen Sie es
 twoFactorCodeTitle = Verwendung der Zwei-Faktor-Authentifizierung
 twoFactorCodeLabel = Code
 twoFactorCodeButton = \u00dcberpr\u00fcfen
+twoFactorAuthResendEmail = Senden Sie einen Code erneut per E-Mail
+twoFactorAuthResendEmailDone = Code erneut gesendet.
+twoFactorAuthChooseMethod_app = Ich werde die Authentifizierungs-App auf meinem Telefon verwenden
+twoFactorAuthChooseMethod_email = Senden Sie einen sicheren Code an
+twoFactorAuthChooseMethodBack = Zur\u00fcck
+twoFactorAuthChooseOtherMethod = Verwenden Sie eine andere Methode
+twoFactorAuthChooseOtherMethodDescription = Bitte w\u00e4hlen Sie eine Methode.
+twoFactorAuthSendTFACodeFailed_app = Der Zwei-Faktor-Code konnte nicht initialisiert werden. Bitte versuchen Sie erneut, sich mit Benutzername und Passwort anzumelden.
+twoFactorAuthSendTFACodeFailed_email = Der Zwei-Faktor-Code konnte nicht an Ihre konfigurierte E-Mail-Adresse gesendet werden. Bitte versuchen Sie erneut, sich mit Benutzername und Passwort anzumelden.
 
 goToServers = Server verwalten
 goToGlobalSettings = Globale Einstellungen verwalten
