--- a/WebRoot/messages/ZaMsg_en_AU.properties
+++ b/WebRoot/messages/ZaMsg_en_AU.properties
@@ -2077,6 +2077,15 @@ enterNewPassword = Please enter a new password and re-enter it in the confirmati
 twoFactorCodeTitle = Using two factor authentication
 twoFactorCodeLabel = Code
 twoFactorCodeButton = Verify
+twoFactorAuthResendEmail = Resend a code by email
+twoFactorAuthResendEmailDone = Code resent.
+twoFactorAuthChooseMethod_app = I will use authentication app on my phone
+twoFactorAuthChooseMethod_email = Send secure code to
+twoFactorAuthChooseMethodBack = Back
+twoFactorAuthChooseOtherMethod = Use other method
+twoFactorAuthChooseOtherMethodDescription = Please choose a method.
+twoFactorAuthSendTFACodeFailed_app = Two factor code could not be initialized. Please try to login with username and password again.
+twoFactorAuthSendTFACodeFailed_email = Two factor code could not be sent to your configured email address. Please try to login with username and password again.
 
 goToServers = Manage Servers
 goToGlobalSettings = Manage Global Settings
