--- a/WebRoot/messages/ZaMsg_es.properties
+++ b/WebRoot/messages/ZaMsg_es.properties
@@ -2067,6 +2067,15 @@ enterNewPassword = Introduce una nueva contrase\u00f1a y vuelve a introducirla e
 twoFactorCodeTitle = Usar autenticaci\u00f3n de dos factores
 twoFactorCodeLabel = C\u00f3digo
 twoFactorCodeButton = Verificar
+twoFactorAuthResendEmail = Reenviar un c\u00f3digo por correo electr\u00f3nico
+twoFactorAuthResendEmailDone = C\u00f3digo reenviado.
+twoFactorAuthChooseMethod_app = Usar\u00e9 la aplicaci\u00f3n de autenticaci\u00f3n en mi tel\u00e9fono
+twoFactorAuthChooseMethod_email = Enviar c\u00f3digo seguro a
+twoFactorAuthChooseMethodBack = Atr\u00e1s
+twoFactorAuthChooseOtherMethod = Usa otro m\u00e9todo
+twoFactorAuthChooseOtherMethodDescription = Por favor elija un m\u00e9todo.
+twoFactorAuthSendTFACodeFailed_app = No se pudo inicializar el c\u00f3digo de dos factores. Intente iniciar sesi\u00f3n con nombre de usuario y contrase\u00f1a nuevamente.
+twoFactorAuthSendTFACodeFailed_email = No se pudo enviar el c\u00f3digo de dos factores a su direcci\u00f3n de correo electr\u00f3nico configurada. Intente iniciar sesi\u00f3n con nombre de usuario y contrase\u00f1a nuevamente.
 
 goToServers = Administrar servidores
 goToGlobalSettings = Administrar configuraci\u00f3n general
