--- a/WebRoot/messages/ZaMsg_eu.properties
+++ b/WebRoot/messages/ZaMsg_eu.properties
@@ -2082,6 +2082,15 @@ enterNewPassword = Idatzi beste pasahitz bat, eta sartu berriz berrespen-eremuan
 twoFactorCodeTitle = Bi faktore autentifikazio erabiliz
 twoFactorCodeLabel = Kodea
 twoFactorCodeButton = Egiaztatu
+twoFactorAuthResendEmail = Bidali berriro kode bat posta elektronikoz
+twoFactorAuthResendEmailDone = Kodea bidaltzen da.
+twoFactorAuthChooseMethod_app = Nire telefonoan autentifikazio aplikazioa erabiliko dut
+twoFactorAuthChooseMethod_email = Bidali kode segurua helbide honetara
+twoFactorAuthChooseMethodBack = Atzera
+twoFactorAuthChooseOtherMethod = Erabili beste metodo bat
+twoFactorAuthChooseOtherMethodDescription = Mesedez, aukeratu metodo bat.
+twoFactorAuthSendTFACodeFailed_app = Ezin izan da hasieratu bi faktore-kode. Mesedez, saiatu berriro erabiltzaile-izena eta pasahitzarekin saioa hasten.
+twoFactorAuthSendTFACodeFailed_email = Ezin izan da bi faktore-kode bidali konfiguratutako helbide elektronikora. Mesedez, saiatu berriro erabiltzaile-izena eta pasahitzarekin saioa hasten.
 
 goToServers = Administratu zerbitzariak
 goToGlobalSettings = Administratu konfigurazio orokorra
