--- a/WebRoot/messages/ZaMsg_fr_CA.properties
+++ b/WebRoot/messages/ZaMsg_fr_CA.properties
@@ -2087,6 +2087,15 @@ enterNewPassword = Saisissez un nouveau mot de passe et ressaisissez-le dans le 
 twoFactorCodeTitle = Utilisation de l\u0027authentification \u00e0 deux facteurs
 twoFactorCodeLabel = Code
 twoFactorCodeButton = V\u00e9rifier
+twoFactorAuthResendEmail = Renvoyer un code par email
+twoFactorAuthResendEmailDone = Code renvoy\u00e9.
+twoFactorAuthChooseMethod_app = J\u2019utiliserai l\u2019application d\u2019authentification sur mon t\u00e9l\u00e9phone
+twoFactorAuthChooseMethod_email = Envoyez le code s\u00e9curis\u00e9 \u00e0
+twoFactorAuthChooseMethodBack = Retour
+twoFactorAuthChooseOtherMethod = Utiliser une autre m\u00e9thode
+twoFactorAuthChooseOtherMethodDescription = Veuillez choisir une m\u00e9thode.
+twoFactorAuthSendTFACodeFailed_app = Le code \u00e0 deux facteurs n\u2019a pas pu \u00eatre initialis\u00e9. Veuillez r\u00e9essayer de vous connecter avec votre nom d\u2019utilisateur et votre mot de passe.
+twoFactorAuthSendTFACodeFailed_email = Le code \u00e0 deux facteurs n\u2019a pas pu \u00eatre envoy\u00e9 \u00e0 votre adresse e-mail configur\u00e9e. Veuillez r\u00e9essayer de vous connecter avec votre nom d\u2019utilisateur et votre mot de passe.
 
 goToServers = Gestion des serveurs
 goToGlobalSettings = Gestion de param\u00e8tres globaux
