--- a/WebRoot/messages/ZaMsg_in.properties
+++ b/WebRoot/messages/ZaMsg_in.properties
@@ -2090,6 +2090,15 @@ enterNewPassword = Masukkan kata sandi baru dan masukkan lagi kata sandi ini di 
 twoFactorCodeTitle = Menggunakan otentikasi dua faktor
 twoFactorCodeLabel = Kode
 twoFactorCodeButton = Memeriksa
+twoFactorAuthResendEmail = Kirim ulang kode melalui email
+twoFactorAuthResendEmailDone = Kode dikirim ulang.
+twoFactorAuthChooseMethod_app = Saya akan menggunakan aplikasi otentikasi di ponsel saya
+twoFactorAuthChooseMethod_email = Kirim kode aman ke
+twoFactorAuthChooseMethodBack = Kembali
+twoFactorAuthChooseOtherMethod = Gunakan metode lain
+twoFactorAuthChooseOtherMethodDescription = Silakan pilih metode.
+twoFactorAuthSendTFACodeFailed_app = Kode dua faktor tidak dapat diinisialisasi. Silakan coba login dengan nama pengguna dan kata sandi lagi.
+twoFactorAuthSendTFACodeFailed_email = Kode dua faktor tidak dapat dikirim ke alamat email Anda yang dikonfigurasi. Silakan coba login dengan nama pengguna dan kata sandi lagi.
 
 goToServers = Kelola Server
 goToGlobalSettings = Kelola Pengaturan Global
