--- a/WebRoot/messages/ZaMsg_it.properties
+++ b/WebRoot/messages/ZaMsg_it.properties
@@ -2028,6 +2028,15 @@ enterNewPassword = Inserisci la nuova password e ripeterla nel campo di conferma
 twoFactorCodeTitle = Utilizzo dell\u0027autenticazione a due fattori
 twoFactorCodeLabel = Codice
 twoFactorCodeButton = Verificare  
+twoFactorAuthResendEmail = Invia nuovamente un codice tramite e-mail
+twoFactorAuthResendEmailDone = Codice inviato nuovamente.
+twoFactorAuthChooseMethod_app = Utilizzer\u00f2 l\u2019app di autenticazione sul mio telefono
+twoFactorAuthChooseMethod_email = Invia il codice sicuro a
+twoFactorAuthChooseMethodBack = Indietro
+twoFactorAuthChooseOtherMethod = Usa un altro metodo
+twoFactorAuthChooseOtherMethodDescription = Scegli un metodo.
+twoFactorAuthSendTFACodeFailed_app = Impossibile inizializzare il codice a due fattori. Prova ad accedere nuovamente con nome utente e password.
+twoFactorAuthSendTFACodeFailed_email = Impossibile inviare il codice a due fattori al tuo indirizzo email configurato. Prova ad accedere nuovamente con nome utente e password.
 
 goToServers = Gestisci server
 goToGlobalSettings = Gestisci impostazioni globali
