--- a/WebRoot/messages/ZaMsg_iw.properties
+++ b/WebRoot/messages/ZaMsg_iw.properties
@@ -2087,6 +2087,15 @@ enterNewPassword = \u05d4\u05d6\u05df \u05e1\u05d9\u05e1\u05de\u05d4 \u05d7\u05d
 twoFactorCodeTitle = \u05e9\u05d9\u05de\u05d5\u05e9 \u05d1\u05d0\u05d9\u05de\u05d5\u05ea \u05e9\u05e0\u05d9 \u05d2\u05d5\u05e8\u05de\u05d9\u05dd
 twoFactorCodeLabel = \u05e7\u05d5\u05d3
 twoFactorCodeButton = \u05ea\u05d0\u05e9\u05e8
+twoFactorAuthResendEmail = \u05e9\u05dc\u05d7 \u05e9\u05d5\u05d1 \u05e7\u05d5\u05d3 \u05d1\u05d0\u05d9\u05de\u05d9\u05d9\u05dc
+twoFactorAuthResendEmailDone = \u05d4\u05e7\u05d5\u05d3 \u05e0\u05e9\u05dc\u05d7 \u05e9\u05d5\u05d1 \u05d5\u05e9\u05d5\u05d1.
+twoFactorAuthChooseMethod_app = \u05d0\u05e0\u05d9 \u05d0\u05e9\u05ea\u05de\u05e9 \u05d1\u05d0\u05e4\u05dc\u05d9\u05e7\u05e6\u05d9\u05d9\u05ea \u05d0\u05d9\u05de\u05d5\u05ea \u05d1\u05d8\u05dc\u05e4\u05d5\u05df \u05e9\u05dc\u05d9
+twoFactorAuthChooseMethod_email = \u05e9\u05dc\u05d7 \u05e7\u05d5\u05d3 \u05de\u05d0\u05d5\u05d1\u05d8\u05d7 \u05d0\u05dc
+twoFactorAuthChooseMethodBack = \u05d7\u05d6\u05e8\u05d4
+twoFactorAuthChooseOtherMethod = \u05d4\u05e9\u05ea\u05de\u05e9 \u05d1\u05e9\u05d9\u05d8\u05d4 \u05d0\u05d7\u05e8\u05ea
+twoFactorAuthChooseOtherMethodDescription = \u05d0\u05e0\u05d0 \u05d1\u05d7\u05e8 \u05e9\u05d9\u05d8\u05d4.
+twoFactorAuthSendTFACodeFailed_app = \u05dc\u05d0 \u05e0\u05d9\u05ea\u05df \u05dc\u05d0\u05ea\u05d7\u05dc \u05e7\u05d5\u05d3 \u05e9\u05e0\u05d9 \u05d2\u05d5\u05e8\u05de\u05d9\u05dd. \u05d0\u05e0\u05d0 \u05e0\u05e1\u05d4 \u05dc\u05d4\u05d9\u05db\u05e0\u05e1 \u05e9\u05d5\u05d1 \u05e2\u05dd \u05e9\u05dd \u05de\u05e9\u05ea\u05de\u05e9 \u05d5\u05e1\u05d9\u05e1\u05de\u05d4.
+twoFactorAuthSendTFACodeFailed_email = \u05dc\u05d0 \u05e0\u05d9\u05ea\u05df \u05dc\u05e9\u05dc\u05d5\u05d7 \u05e7\u05d5\u05d3 \u05e9\u05e0\u05d9 \u05d2\u05d5\u05e8\u05de\u05d9\u05dd \u05dc\u05db\u05ea\u05d5\u05d1\u05ea \u05d4\u05d0\u05d9\u05de\u05d9\u05d9\u05dc \u05d4\u05de\u05d5\u05d2\u05d3\u05e8\u05ea \u05e9\u05dc\u05da. \u05d0\u05e0\u05d0 \u05e0\u05e1\u05d4 \u05dc\u05d4\u05d9\u05db\u05e0\u05e1 \u05e9\u05d5\u05d1 \u05e2\u05dd \u05e9\u05dd \u05de\u05e9\u05ea\u05de\u05e9 \u05d5\u05e1\u05d9\u05e1\u05de\u05d4.
 
 goToServers = \u05e0\u05d9\u05d4\u05d5\u05dc \u05e9\u05e8\u05ea\u05d9\u05dd
 goToGlobalSettings = \u05e0\u05d9\u05d4\u05d5\u05dc \u05d4\u05d2\u05d3\u05e8\u05d5\u05ea \u05db\u05dc\u05dc\u05d9\u05d5\u05ea
