--- a/WebRoot/messages/ZaMsg_ms.properties
+++ b/WebRoot/messages/ZaMsg_ms.properties
@@ -2087,6 +2087,15 @@ enterNewPassword = Sila masukkan kata laluan baharu dan masukkannya semula dalam
 twoFactorCodeTitle = Menggunakan pengesahan dua faktor
 twoFactorCodeLabel = Kod
 twoFactorCodeButton = Sahkan
+twoFactorAuthResendEmail = Hantar semula kod melalui e-mel
+twoFactorAuthResendEmailDone = Kod dihantar semula.
+twoFactorAuthChooseMethod_app = Saya akan menggunakan aplikasi pengesahan pada telefon saya
+twoFactorAuthChooseMethod_email = Hantar kod selamat ke
+twoFactorAuthChooseMethodBack = Kembali
+twoFactorAuthChooseOtherMethod = Gunakan kaedah lain
+twoFactorAuthChooseOtherMethodDescription = Sila pilih kaedah.
+twoFactorAuthSendTFACodeFailed_app = Kod dua faktor tidak dapat dimulakan. Sila cuba log masuk dengan nama pengguna dan kata laluan sekali lagi.
+twoFactorAuthSendTFACodeFailed_email = Kod dua faktor tidak dapat dihantar ke alamat e-mel anda yang dikonfigurasikan. Sila cuba log masuk dengan nama pengguna dan kata laluan sekali lagi.
 
 goToServers = Urus Pelayan
 goToGlobalSettings = Urus Tetapan Global
