--- a/WebRoot/messages/ZaMsg_nl.properties
+++ b/WebRoot/messages/ZaMsg_nl.properties
@@ -2028,6 +2028,15 @@ enterNewPassword = Voer een nieuw wachtwoord in en typ het ook in het veld Beves
 twoFactorCodeTitle = Twee-factor-authenticatie gebruiken
 twoFactorCodeLabel = Code
 twoFactorCodeButton = Verifi\u00ebren
+twoFactorAuthResendEmail = Verstuur een code opnieuw per e-mail
+twoFactorAuthResendEmailDone = Code kwalijk.
+twoFactorAuthChooseMethod_app = Ik gebruik de authenticatie-app op mijn telefoon
+twoFactorAuthChooseMethod_email = Stuur beveiligde code naar
+twoFactorAuthChooseMethodBack = Terug
+twoFactorAuthChooseOtherMethod = Gebruik een andere methode
+twoFactorAuthChooseOtherMethodDescription = Kies een methode.
+twoFactorAuthSendTFACodeFailed_app = De tweefactorcode kan niet worden ge\u00efnitialiseerd. Probeer opnieuw in te loggen met gebruikersnaam en wachtwoord.
+twoFactorAuthSendTFACodeFailed_email = De tweefactorcode kan niet naar uw geconfigureerde e-mailadres worden verzonden. Probeer opnieuw in te loggen met gebruikersnaam en wachtwoord.
 
 goToServers = Servers beheren
 goToGlobalSettings = Algemene instellingen beheren
