--- a/WebRoot/messages/ZaMsg_ro.properties
+++ b/WebRoot/messages/ZaMsg_ro.properties
@@ -2087,6 +2087,15 @@ enterNewPassword = Introduce\u0163i o parol\u0103 nou\u0103 aici \u015fi \u00een
 twoFactorCodeTitle = Folosind autentificarea cu doi factori
 twoFactorCodeLabel = Cod
 twoFactorCodeButton = Verifica
+twoFactorAuthResendEmail = Retrimite\u021bi un cod prin e-mail
+twoFactorAuthResendEmailDone = Cod resim\u021bit.
+twoFactorAuthChooseMethod_app = Voi folosi aplica\u021bia de autentificare pe telefonul meu
+twoFactorAuthChooseMethod_email = Trimite codul securizat c\u0103tre
+twoFactorAuthChooseMethodBack = \u00cenapoi
+twoFactorAuthChooseOtherMethod = Folosi\u021bi alt\u0103 metod\u0103
+twoFactorAuthChooseOtherMethodDescription = V\u0103 rug\u0103m s\u0103 alege\u021bi o metod\u0103.
+twoFactorAuthSendTFACodeFailed_app = Codul cu doi factori nu a putut fi ini\u021bializat. V\u0103 rug\u0103m s\u0103 \u00eencerca\u021bi s\u0103 v\u0103 conecta\u021bi din nou cu numele de utilizator \u0219i parola.
+twoFactorAuthSendTFACodeFailed_email = Codul cu doi factori nu a putut fi trimis la adresa dvs. de e-mail configurat\u0103. V\u0103 rug\u0103m s\u0103 \u00eencerca\u021bi s\u0103 v\u0103 conecta\u021bi din nou cu numele de utilizator \u0219i parola.
 
 goToServers = Gestionare servere
 goToGlobalSettings = Gestionare set\u0103ri globale
