--- a/WebRoot/messages/ZaMsg_sl.properties
+++ b/WebRoot/messages/ZaMsg_sl.properties
@@ -2087,6 +2087,15 @@ enterNewPassword = Vnesite novo geslo in ga ponovite v polju za potrditev.
 twoFactorCodeTitle = Uporaba dvofaktorske avtentikacije
 twoFactorCodeLabel = Koda
 twoFactorCodeButton = Preverite
+twoFactorAuthResendEmail = Ponovno po\u0161ljite kodo po e-po\u0161ti
+twoFactorAuthResendEmailDone = Koda ponovno poslana.
+twoFactorAuthChooseMethod_app = V telefonu bom uporabil aplikacijo za preverjanje pristnosti
+twoFactorAuthChooseMethod_email = Po\u0161lji varno kodo na
+twoFactorAuthChooseMethodBack = Nazaj
+twoFactorAuthChooseOtherMethod = Uporabite drugo metodo
+twoFactorAuthChooseOtherMethodDescription = Izberite na\u010din.
+twoFactorAuthSendTFACodeFailed_app = Dvofaktorske kode ni bilo mogo\u010de inicializirati. Poskusite se znova prijaviti z uporabni\u0161kim imenom in geslom.
+twoFactorAuthSendTFACodeFailed_email = Dvofaktorske kode ni bilo mogo\u010de poslati na va\u0161 konfigurirani e-po\u0161tni naslov. Poskusite se znova prijaviti z uporabni\u0161kim imenom in geslom.
 
 goToServers = Upravljanje stre\u017enikov
 goToGlobalSettings = Upravljanje globalnih nastavitev
