--- a/WebRoot/messages/ZaMsg_sv.properties
+++ b/WebRoot/messages/ZaMsg_sv.properties
@@ -2028,6 +2028,15 @@ enterNewPassword = Ange ett nytt l\u00f6senord och skriv in det igen i f\u00e4lt
 twoFactorCodeTitle = Anv\u00e4nda tv\u00e5faktorautentisering
 twoFactorCodeLabel = Koda
 twoFactorCodeButton = Kontrollera
+twoFactorAuthResendEmail = Skicka en kod igen via e-post
+twoFactorAuthResendEmailDone = Koden skickas p\u00e5 nytt.
+twoFactorAuthChooseMethod_app = Jag kommer att anv\u00e4nda autentiseringsappen p\u00e5 min telefon
+twoFactorAuthChooseMethod_email = Skicka s\u00e4kerhetskod till
+twoFactorAuthChooseMethodBack = Bak\u00e5t
+twoFactorAuthChooseOtherMethod = Anv\u00e4nd en annan metod
+twoFactorAuthChooseOtherMethodDescription = V\u00e4lj en metod.
+twoFactorAuthSendTFACodeFailed_app = Tv\u00e5faktorskod kunde inte initieras. F\u00f6rs\u00f6k att logga in med anv\u00e4ndarnamn och l\u00f6senord igen.
+twoFactorAuthSendTFACodeFailed_email = Tv\u00e5faktorskod kunde inte skickas till din konfigurerade e-postadress. F\u00f6rs\u00f6k att logga in med anv\u00e4ndarnamn och l\u00f6senord igen.
 
 goToServers = Hantera servrar
 goToGlobalSettings = Hantera globala inst\u00e4llningar
