--- a/WebRoot/messages/ZaMsg_vi.properties
+++ b/WebRoot/messages/ZaMsg_vi.properties
@@ -2091,6 +2091,15 @@ enterNewPassword = Vui l\u00f2ng nh\u1eadp m\u1ed9t m\u1eadt kh\u1ea9u m\u1edbi 
 twoFactorCodeTitle = S\u1eed d\u1ee5ng x\u00e1c th\u1ef1c hai y\u1ebfu t\u1ed1
 twoFactorCodeLabel = M\u00e3
 twoFactorCodeButton = Ki\u1ec3m ch\u1ee9ng
+twoFactorAuthResendEmail = G\u1eedi l\u1ea1i m\u00e3 qua email
+twoFactorAuthResendEmailDone = M\u00e3 g\u1eedi l\u1ea1i.
+twoFactorAuthChooseMethod_app = T\u00f4i s\u1ebd s\u1eed d\u1ee5ng \u1ee9ng d\u1ee5ng x\u00e1c th\u1ef1c tr\u00ean \u0111i\u1ec7n tho\u1ea1i c\u1ee7a m\u00ecnh
+twoFactorAuthChooseMethod_email = G\u1eedi m\u00e3 b\u1ea3o m\u1eadt t\u1edbi
+twoFactorAuthChooseMethodBack = Quay l\u1ea1i
+twoFactorAuthChooseOtherMethod = S\u1eed d\u1ee5ng ph\u01b0\u01a1ng ph\u00e1p kh\u00e1c
+twoFactorAuthChooseOtherMethodDescription = Vui l\u00f2ng ch\u1ecdn m\u1ed9t ph\u01b0\u01a1ng ph\u00e1p.
+twoFactorAuthSendTFACodeFailed_app = M\u00e3 hai y\u1ebfu t\u1ed1 kh\u00f4ng th\u1ec3 \u0111\u01b0\u1ee3c kh\u1edfi t\u1ea1o. Vui l\u00f2ng th\u1eed \u0111\u0103ng nh\u1eadp l\u1ea1i b\u1eb1ng t\u00ean ng\u01b0\u1eddi d\u00f9ng v\u00e0 m\u1eadt kh\u1ea9u.
+twoFactorAuthSendTFACodeFailed_email = Kh\u00f4ng th\u1ec3 g\u1eedi m\u00e3 hai y\u1ebfu t\u1ed1 \u0111\u1ebfn \u0111\u1ecba ch\u1ec9 email \u0111\u00e3 \u0111\u1ecbnh c\u1ea5u h\u00ecnh c\u1ee7a b\u1ea1n. Vui l\u00f2ng th\u1eed \u0111\u0103ng nh\u1eadp l\u1ea1i b\u1eb1ng t\u00ean ng\u01b0\u1eddi d\u00f9ng v\u00e0 m\u1eadt kh\u1ea9u.
 
 goToServers = Qu\u1ea3n l\u00fd m\u00e1y ch\u1ee7
 goToGlobalSettings = Qu\u1ea3n l\u00fd ph\u1ea7n thi\u1ebft l\u1eadp chung
