--- a/WebRoot/messages/ZaMsg_zh_CN.properties
+++ b/WebRoot/messages/ZaMsg_zh_CN.properties
@@ -2077,6 +2077,15 @@ enterNewPassword = \u8bf7\u8f93\u5165\u65b0\u5bc6\u7801\u5e76\u5728\u786e\u8ba4\
 twoFactorCodeTitle = \u4f7f\u7528\u4e24\u56e0\u7d20\u9a8c\u8bc1
 twoFactorCodeLabel = \u7801
 twoFactorCodeButton = \u6821\u9a8c
+twoFactorAuthResendEmail = \u901a\u8fc7\u7535\u5b50\u90ae\u4ef6\u91cd\u65b0\u53d1\u9001\u4ee3\u7801
+twoFactorAuthResendEmailDone = \u4ee3\u7801\u5df2\u91cd\u65b0\u53d1\u9001\u3002
+twoFactorAuthChooseMethod_app = \u6211\u5c06\u4f7f\u7528\u624b\u673a\u4e0a\u7684\u8eab\u4efd\u9a8c\u8bc1\u5e94\u7528\u7a0b\u5e8f
+twoFactorAuthChooseMethod_email = \u5c06\u5b89\u5168\u4ee3\u7801\u53d1\u9001\u81f3
+twoFactorAuthChooseMethodBack = \u540e\u9000
+twoFactorAuthChooseOtherMethod = \u4f7f\u7528\u5176\u4ed6\u65b9\u6cd5
+twoFactorAuthChooseOtherMethodDescription = \u8bf7\u9009\u62e9\u4e00\u79cd\u65b9\u6cd5\u3002
+twoFactorAuthSendTFACodeFailed_app = \u65e0\u6cd5\u521d\u59cb\u5316\u4e24\u56e0\u7d20\u4ee3\u7801\u3002\u8bf7\u5c1d\u8bd5\u518d\u6b21\u4f7f\u7528\u7528\u6237\u540d\u548c\u5bc6\u7801\u767b\u5f55\u3002
+twoFactorAuthSendTFACodeFailed_email = \u65e0\u6cd5\u5c06\u4e24\u56e0\u7d20\u4ee3\u7801\u53d1\u9001\u5230\u60a8\u914d\u7f6e\u7684\u7535\u5b50\u90ae\u4ef6\u5730\u5740\u3002\u8bf7\u5c1d\u8bd5\u518d\u6b21\u4f7f\u7528\u7528\u6237\u540d\u548c\u5bc6\u7801\u767b\u5f55\u3002
 
 goToServers = \u7ba1\u7406\u670d\u52a1\u5668
 goToGlobalSettings = \u7ba1\u7406\u5168\u5c40\u8bbe\u7f6e
