--- a/WebRoot/messages/ZaMsg_hu.properties
+++ b/WebRoot/messages/ZaMsg_hu.properties
@@ -2087,6 +2087,15 @@ enterNewPassword = Adjon meg egy \u00faj jelsz\u00f3t, \u00e9s a meger\u0151s\u0
 twoFactorCodeTitle = K\u00e9tfaktoros hiteles\u00edt\u00e9s haszn\u00e1lata
 twoFactorCodeLabel = K\u00f3d
 twoFactorCodeButton = Ellen\u0151rizze
+twoFactorAuthResendEmail = K\u00f3d \u00fajrak\u00fcld\u00e9se e-mailben
+twoFactorAuthResendEmailDone = A k\u00f3d \u00fajrak\u00fcldve.
+twoFactorAuthChooseMethod_app = Hiteles\u00edt\u00e9si alkalmaz\u00e1st fogok haszn\u00e1lni a telefonomon
+twoFactorAuthChooseMethod_email = Biztons\u00e1gi k\u00f3d k\u00fcld\u00e9se a c\u00edmre
+twoFactorAuthChooseMethodBack = Vissza
+twoFactorAuthChooseOtherMethod = Haszn\u00e1ljon m\u00e1s m\u00f3dszert
+twoFactorAuthChooseOtherMethodDescription = K\u00e9rj\u00fck, v\u00e1lasszon egy m\u00f3dszert.
+twoFactorAuthSendTFACodeFailed_app = A k\u00e9tfaktoros k\u00f3d nem inicializ\u00e1lhat\u00f3. K\u00e9rj\u00fck, pr\u00f3b\u00e1ljon meg \u00fajra bejelentkezni felhaszn\u00e1l\u00f3n\u00e9vvel \u00e9s jelsz\u00f3val.
+twoFactorAuthSendTFACodeFailed_email = A k\u00e9tfaktoros k\u00f3dot nem siker\u00fclt elk\u00fcldeni a be\u00e1ll\u00edtott e-mail c\u00edm\u00e9re. K\u00e9rj\u00fck, pr\u00f3b\u00e1ljon meg \u00fajra bejelentkezni felhaszn\u00e1l\u00f3n\u00e9vvel \u00e9s jelsz\u00f3val.
 
 goToServers = Kiszolg\u00e1l\u00f3k kezel\u00e9se
 goToGlobalSettings = Glob\u00e1lis be\u00e1ll\u00edt\u00e1sok kezel\u00e9se
