--- a/WebRoot/messages/ZaMsg_ja.properties
+++ b/WebRoot/messages/ZaMsg_ja.properties
@@ -2044,6 +2044,15 @@ enterNewPassword = \u65b0\u3057\u3044\u30d1\u30b9\u30ef\u30fc\u30c9\u3092\u5165\
 twoFactorCodeTitle = \u4e8c\u8981\u7d20\u8a8d\u8a3c\u306e\u4f7f\u7528
 twoFactorCodeLabel = \u30b3\u30fc\u30c9
 twoFactorCodeButton = \u78ba\u8a8d
+twoFactorAuthResendEmail = \u30b3\u30fc\u30c9\u3092\u30e1\u30fc\u30eb\u3067\u518d\u9001\u4fe1\u3059\u308b
+twoFactorAuthResendEmailDone = \u30b3\u30fc\u30c9\u304c\u518d\u9001\u4fe1\u3055\u308c\u307e\u3057\u305f\u3002
+twoFactorAuthChooseMethod_app = \u30b9\u30de\u30fc\u30c8\u30d5\u30a9\u30f3\u306e\u8a8d\u8a3c\u30a2\u30d7\u30ea\u3092\u4f7f\u7528\u3059\u308b
+twoFactorAuthChooseMethod_email = \u8a8d\u8a3c\u30b3\u30fc\u30c9\u3092\u30e1\u30fc\u30eb\u3067\u9001\u4fe1\u3059\u308b
+twoFactorAuthChooseMethodBack = \u623b\u308b
+twoFactorAuthChooseOtherMethod = \u4ed6\u306e\u65b9\u6cd5\u3092\u4f7f\u7528\u3059\u308b
+twoFactorAuthChooseOtherMethodDescription = \u65b9\u6cd5\u3092\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+twoFactorAuthSendTFACodeFailed_app = \u8a8d\u8a3c\u30b3\u30fc\u30c9\u3092\u521d\u671f\u5316\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002\u30e6\u30fc\u30b6\u30fc\u540d\u3068\u30d1\u30b9\u30ef\u30fc\u30c9\u3092\u4f7f\u7528\u3057\u3066\u518d\u5ea6\u30ed\u30b0\u30a4\u30f3\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+twoFactorAuthSendTFACodeFailed_email = \u8a2d\u5b9a\u3055\u308c\u305f\u30e1\u30fc\u30eb\u30a2\u30c9\u30ec\u30b9\u306b\u8a8d\u8a3c\u30b3\u30fc\u30c9\u3092\u9001\u4fe1\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002\u30e6\u30fc\u30b6\u30fc\u540d\u3068\u30d1\u30b9\u30ef\u30fc\u30c9\u3092\u4f7f\u7528\u3057\u3066\u518d\u5ea6\u30ed\u30b0\u30a4\u30f3\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 
 goToServers = \u30b5\u30fc\u30d0\u30fc\u3092\u7ba1\u7406
 goToGlobalSettings = \u30b0\u30ed\u30fc\u30d0\u30eb\u8a2d\u5b9a\u3092\u7ba1\u7406
