--- a/WebRoot/messages/ZaMsg_ko.properties
+++ b/WebRoot/messages/ZaMsg_ko.properties
@@ -2036,6 +2036,15 @@ enterNewPassword = \uc0c8 \ube44\ubc00\ubc88\ud638\ub97c \uc785\ub825\ud558\uace
 twoFactorCodeTitle = \u0032 \ub2e8\uacc4 \uc778\uc99d \uc0ac\uc6a9
 twoFactorCodeLabel = \uc554\ud638
 twoFactorCodeButton = \ud655\uc778
+twoFactorAuthResendEmail = \uc774\uba54\uc77c\ub85c \ucf54\ub4dc \uc7ac\uc804\uc1a1
+twoFactorAuthResendEmailDone = \ucf54\ub4dc\uac00 \ub2e4\uc2dc \uc804\uc1a1\ub418\uc5c8\uc2b5\ub2c8\ub2e4.
+twoFactorAuthChooseMethod_app = \ud734\ub300\ud3f0\uc5d0\uc11c \uc778\uc99d \uc571\uc744 \uc0ac\uc6a9\ud558\uaca0\uc2b5\ub2c8\ub2e4.
+twoFactorAuthChooseMethod_email = \ub2e4\uc74c\uc73c\ub85c \ubcf4\uc548 \ucf54\ub4dc \ubcf4\ub0b4\uae30
+twoFactorAuthChooseMethodBack = \ub4a4\ub85c
+twoFactorAuthChooseOtherMethod = \ub2e4\ub978 \ubc29\ubc95\uc744 \uc0ac\uc6a9\ud558\uc138\uc694
+twoFactorAuthChooseOtherMethodDescription = \ubc29\ubc95\uc744 \uc120\ud0dd\ud558\uc138\uc694.
+twoFactorAuthSendTFACodeFailed_app = 2\ub2e8\uacc4 \ucf54\ub4dc\ub97c \ucd08\uae30\ud654\ud560 \uc218 \uc5c6\uc2b5\ub2c8\ub2e4. \uc0ac\uc6a9\uc790 \uc774\ub984\uacfc \ube44\ubc00\ubc88\ud638\ub97c \uc0ac\uc6a9\ud558\uc5ec \ub2e4\uc2dc \ub85c\uadf8\uc778\ud574 \ubcf4\uc2ed\uc2dc\uc624.
+twoFactorAuthSendTFACodeFailed_email = \uad6c\uc131\ub41c \uc774\uba54\uc77c \uc8fc\uc18c\ub85c 2\ub2e8\uacc4 \ucf54\ub4dc\ub97c \ubcf4\ub0bc \uc218 \uc5c6\uc2b5\ub2c8\ub2e4. \uc0ac\uc6a9\uc790 \uc774\ub984\uacfc \ube44\ubc00\ubc88\ud638\ub97c \uc0ac\uc6a9\ud558\uc5ec \ub2e4\uc2dc \ub85c\uadf8\uc778\ud574 \ubcf4\uc2ed\uc2dc\uc624.
 
 goToServers = \uc11c\ubc84 \uad00\ub9ac
 goToGlobalSettings = \uc804\uc5ed \uc124\uc815 \uad00\ub9ac
