--- a/WebRoot/messages/ZaMsg_lo.properties
+++ b/WebRoot/messages/ZaMsg_lo.properties
@@ -2087,6 +2087,15 @@ enterNewPassword = \u0e81\u0eb0\u0ea5\u0eb8\u0e99\u0eb2\u0ec3\u0eaa\u0ec8\u0ea5\
 twoFactorCodeTitle = \u0e81\u0eb2\u0e99 \u0e99\u0eb3 \u0ec3\u0e8a\u0ec9\u0e81\u0eb2\u0e99\u0e81\u0ea7\u0e94\u0eaa\u0ead\u0e9a\u0eaa\u0ead\u0e87\u0e9b\u0eb1\u0e94\u0ec3\u0e88
 twoFactorCodeLabel = \u0ea5\u0eb0\u0eab\u0eb1\u0e94
 twoFactorCodeButton = \u0ea2\u0eb1\u0ec9\u0e87\u0ea2\u0eb7\u0e99
+twoFactorAuthResendEmail = \u0eaa\u0ebb\u0ec8\u0e87\u0ea5\u0eb0\u0eab\u0eb1\u0e94\u0e84\u0eb7\u0e99\u0ec3\u0edd\u0ec8\u0e97\u0eb2\u0e87\u0ead\u0eb5\u0ec0\u0ea1\u0ea7
+twoFactorAuthResendEmailDone = \u0ea5\u0eb0\u0eab\u0eb1\u0e94\u0e96\u0eb7\u0e81\u0eaa\u0ebb\u0ec8\u0e87\u0e84\u0eb7\u0e99.
+twoFactorAuthChooseMethod_app = \u0e82\u0ec9\u0ead\u0e8d\u0e88\u0eb0\u0ec3\u0e8a\u0ec9\u0ec1\u0ead\u0eb1\u0e9a\u0e81\u0eb2\u0e99\u0e9e\u0eb4\u0eaa\u0eb9\u0e94\u0ea2\u0eb7\u0e99\u0ea2\u0eb1\u0e99\u0ec3\u0e99\u0ec2\u0e97\u0ea5\u0eb0\u0eaa\u0eb1\u0e9a\u0e82\u0ead\u0e87\u0e82\u0ec9\u0ead\u0e8d
+twoFactorAuthChooseMethod_email = \u0eaa\u0ebb\u0ec8\u0e87\u0ea5\u0eb0\u0eab\u0eb1\u0e94\u0e84\u0ea7\u0eb2\u0ea1\u0e9b\u0ead\u0e94\u0ec4\u0e9e\u0ec4\u0e9b\u0eab\u0eb2
+twoFactorAuthChooseMethodBack = \u0e81\u0eb1\u0e9a\u0e84\u0eb7\u0e99
+twoFactorAuthChooseOtherMethod = \u0ec3\u0e8a\u0ec9\u0ea7\u0eb4\u0e97\u0eb5\u0ead\u0eb7\u0ec8\u0e99
+twoFactorAuthChooseOtherMethodDescription = \u0e81\u0eb0\u0ea5\u0eb8\u0e99\u0eb2\u0ec0\u0ea5\u0eb7\u0ead\u0e81\u0ea7\u0eb4\u0e97\u0eb5\u0e81\u0eb2\u0e99.
+twoFactorAuthSendTFACodeFailed_app = \u0ea5\u0eb0\u0eab\u0eb1\u0e94\u0eaa\u0ead\u0e87\u0e9b\u0eb1\u0e94\u0ec4\u0e88\u0e9a\u0ecd\u0ec8\u0eaa\u0eb2\u0ea1\u0eb2\u0e94\u0ec0\u0ea5\u0eb5\u0ec8\u0ea1\u0e95\u0ebb\u0ec9\u0e99\u0ec4\u0e94\u0ec9. \u0e81\u0eb0\u0ea5\u0eb8\u0e99\u0eb2\u0ea5\u0ead\u0e87\u0ec0\u0e82\u0ebb\u0ec9\u0eb2\u0eaa\u0eb9\u0ec8\u0ea5\u0eb0\u0e9a\u0ebb\u0e9a\u0e94\u0ec9\u0ea7\u0e8d\u0e8a\u0eb7\u0ec8\u0e9c\u0eb9\u0ec9\u0ec3\u0e8a\u0ec9 \u0ec1\u0ea5\u0eb0\u0ea5\u0eb0\u0eab\u0eb1\u0e94\u0e9c\u0ec8\u0eb2\u0e99\u0ead\u0eb5\u0e81\u0e84\u0eb1\u0ec9\u0e87.
+twoFactorAuthSendTFACodeFailed_email = \u0ea5\u0eb0\u0eab\u0eb1\u0e94\u0eaa\u0ead\u0e87\u0e9b\u0eb1\u0e94\u0ec4\u0e88\u0e9a\u0ecd\u0ec8\u0eaa\u0eb2\u0ea1\u0eb2\u0e94\u0e96\u0eb7\u0e81\u0eaa\u0ebb\u0ec8\u0e87\u0ec4\u0e9b\u0eab\u0eb2\u0e97\u0eb5\u0ec8\u0ea2\u0eb9\u0ec8\u0ead\u0eb5\u0ec0\u0ea1\u0ea7\u0e97\u0eb5\u0ec8\u0e97\u0ec8\u0eb2\u0e99\u0e95\u0eb1\u0ec9\u0e87\u0ec4\u0ea7\u0ec9. \u0e81\u0eb0\u0ea5\u0eb8\u0e99\u0eb2\u0ea5\u0ead\u0e87\u0ec0\u0e82\u0ebb\u0ec9\u0eb2\u0eaa\u0eb9\u0ec8\u0ea5\u0eb0\u0e9a\u0ebb\u0e9a\u0e94\u0ec9\u0ea7\u0e8d\u0e8a\u0eb7\u0ec8\u0e9c\u0eb9\u0ec9\u0ec3\u0e8a\u0ec9 \u0ec1\u0ea5\u0eb0\u0ea5\u0eb0\u0eab\u0eb1\u0e94\u0e9c\u0ec8\u0eb2\u0e99\u0ead\u0eb5\u0e81\u0e84\u0eb1\u0ec9\u0e87.
 
 goToServers = \u0e84\u0eb8\u0ec9\u0ea1\u0e84\u0ead\u0e87\u0ec0\u0e8a\u0eb5\u0ec0\u0ea7\u0eb5
 goToGlobalSettings = \u0e84\u0eb8\u0ec9\u0ea1\u0e84\u0ead\u0e87\u0e81\u0eb2\u0e99\u0e95\u0eb1\u0ec9\u0e87\u0e84\u0ec8\u0eb2\u0e97\u0ebb\u0ec8\u0ea7\u0ec2\u0ea5\u0e81
