--- a/WebRoot/messages/ZaMsg_no.properties
+++ b/WebRoot/messages/ZaMsg_no.properties
@@ -2091,6 +2091,15 @@ enterNewPassword = Angi et nytt passord, og repeter det i bekreftelsesfeltet.
 twoFactorCodeTitle = Bruker tofaktorautentisering
 twoFactorCodeLabel = Kode
 twoFactorCodeButton = Bekrefte
+twoFactorAuthResendEmail = Send en kode p\u00e5 nytt via e-post
+twoFactorAuthResendEmailDone = Koden sendes p\u00e5 nytt.
+twoFactorAuthChooseMethod_app = Jeg vil bruke autentiseringsappen p\u00e5 telefonen min
+twoFactorAuthChooseMethod_email = Send sikker kode til
+twoFactorAuthChooseMethodBack = Tilbake
+twoFactorAuthChooseOtherMethod = Bruk en annen metode
+twoFactorAuthChooseOtherMethodDescription = Vennligst velg en metode.
+twoFactorAuthSendTFACodeFailed_app = Tofaktorkode kunne ikke initialiseres. Vennligst pr\u00f8v \u00e5 logge p\u00e5 med brukernavn og passord p\u00e5 nytt.
+twoFactorAuthSendTFACodeFailed_email = Tofaktorkode kunne ikke sendes til den konfigurerte e-postadressen din. Vennligst pr\u00f8v \u00e5 logge p\u00e5 med brukernavn og passord p\u00e5 nytt.
 
 goToServers = Administrer servere
 goToGlobalSettings = Administrer globale innstillinger
