--- a/WebRoot/messages/ZaMsg_pl.properties
+++ b/WebRoot/messages/ZaMsg_pl.properties
@@ -2078,6 +2078,15 @@ enterNewPassword = Wprowad\u017a nowe has\u0142o i wprowad\u017a je ponownie w p
 twoFactorCodeTitle = Korzystanie z uwierzytelniania dwuskładnikowego
 twoFactorCodeLabel = Kod
 twoFactorCodeButton = Zweryfikowa\u0107
+twoFactorAuthResendEmail = Wy\u015blij ponownie kod e-mailem
+twoFactorAuthResendEmailDone = Kod przes\u0142any ponownie.
+twoFactorAuthChooseMethod_app = B\u0119d\u0119 korzysta\u0107 z aplikacji uwierzytelniaj\u0105cej na moim telefonie
+twoFactorAuthChooseMethod_email = Wy\u015blij bezpieczny kod do
+twoFactorAuthChooseMethodBack = Wstecz
+twoFactorAuthChooseOtherMethod = U\u017cyj innej metody
+twoFactorAuthChooseOtherMethodDescription = Wybierz metod\u0119.
+twoFactorAuthSendTFACodeFailed_app = Nie mo\u017cna zainicjowa\u0107 kodu dwuczynnikowego. Spr\u00f3buj ponownie zalogowa\u0107 si\u0119 przy u\u017cyciu nazwy u\u017cytkownika i has\u0142a.
+twoFactorAuthSendTFACodeFailed_email = Nie mo\u017cna wys\u0142a\u0107 kodu dwusk\u0142adnikowego na skonfigurowany adres e-mail. Spr\u00f3buj ponownie zalogowa\u0107 si\u0119 przy u\u017cyciu nazwy u\u017cytkownika i has\u0142a.
 
 goToServers = Zarz\u0105dzanie serwerami
 goToGlobalSettings = Zarz\u0105dzanie ustawieniami globalnymi
