--- a/WebRoot/messages/ZaMsg_pt_BR.properties
+++ b/WebRoot/messages/ZaMsg_pt_BR.properties
@@ -2027,6 +2027,15 @@ enterNewPassword = Digite uma nova senha e digite-a novamente no campo de confir
 twoFactorCodeTitle = Usando autentica\u00e7\u00e3o de dois fatores
 twoFactorCodeLabel = C\u00f3digo
 twoFactorCodeButton = Verificar
+twoFactorAuthResendEmail = Reenviar um c\u00f3digo por e-mail
+twoFactorAuthResendEmailDone = C\u00f3digo reenviado.
+twoFactorAuthChooseMethod_app = Vou usar o aplicativo de autentica\u00e7\u00e3o no meu telefone
+twoFactorAuthChooseMethod_email = Envie c\u00f3digo seguro para
+twoFactorAuthChooseMethodBack = Voltar
+twoFactorAuthChooseOtherMethod = Use outro m\u00e9todo
+twoFactorAuthChooseOtherMethodDescription = Por favor, escolha um m\u00e9todo.
+twoFactorAuthSendTFACodeFailed_app = O c\u00f3digo de dois fatores n\u00e3o p\u00f4de ser inicializado. Por favor, tente fazer login com nome de usu\u00e1rio e senha novamente.
+twoFactorAuthSendTFACodeFailed_email = N\u00e3o foi poss\u00edvel enviar o c\u00f3digo de dois fatores para o endere\u00e7o de e-mail configurado. Por favor, tente fazer login com nome de usu\u00e1rio e senha novamente.
 
 goToServers = Gerenciar servidores
 goToGlobalSettings = Gerenciar configura\u00e7\u00f5es globais
