--- a/WebRoot/messages/ZaMsg_tr.properties
+++ b/WebRoot/messages/ZaMsg_tr.properties
@@ -2085,6 +2085,15 @@ enterNewPassword = L\u00fctfen yeni bir parola girin ve onay alan\u0131na yenide
 twoFactorCodeTitle = \u0130ki fakt\u00f6rl\u00fc kimlik do\u011frulama kullanma
 twoFactorCodeLabel = Kodu
 twoFactorCodeButton = Do\u011frulayın
+twoFactorAuthResendEmail = Kodu e-postayla yeniden g\u00f6nderme
+twoFactorAuthResendEmailDone = Kod Yeniden G\u00f6nderildi.
+twoFactorAuthChooseMethod_app = Telefonumda kimlik do\u011frulama uygulamas\u0131n\u0131 kullanaca\u011f\u0131m
+twoFactorAuthChooseMethod_email = G\u00fcvenli kodu \u015furaya g\u00f6nder:
+twoFactorAuthChooseMethodBack = Geri
+twoFactorAuthChooseOtherMethod = Ba\u015fka bir y\u00f6ntem kullan
+twoFactorAuthChooseOtherMethodDescription = L\u00fctfen bir y\u00f6ntem se\u00e7in.
+twoFactorAuthSendTFACodeFailed_app = \u0130ki fakt\u00f6rl\u00fc kod ba\u015flat\u0131lamad\u0131. L\u00fctfen kullan\u0131c\u0131 ad\u0131 ve \u015fifrenizle tekrar giri\u015f yapmay\u0131 deneyiniz.
+twoFactorAuthSendTFACodeFailed_email = Yap\u0131land\u0131r\u0131lm\u0131\u015f e-posta adresinize iki fakt\u00f6rl\u00fc kod g\u00f6nderilemedi. L\u00fctfen kullan\u0131c\u0131 ad\u0131 ve \u015fifrenizle tekrar giri\u015f yapmay\u0131 deneyiniz.
 
 goToServers = Sunucular\u0131 Y\u00f6net
 goToGlobalSettings = Global Ayarlar\u0131 Y\u00f6net
