--- a/WebRoot/messages/ZaMsg_zh_TW.properties
+++ b/WebRoot/messages/ZaMsg_zh_TW.properties
@@ -2085,6 +2085,15 @@ enterNewPassword = \u8acb\u8f38\u5165\u65b0\u5bc6\u78bc\uff0c\u7136\u5f8c\u5728\
 twoFactorCodeTitle = \u4f7f\u7528\u5169\u56e0\u7d20\u9a57\u8b49
 twoFactorCodeLabel = \u78bc
 twoFactorCodeButton = \u6821\u9a57
+twoFactorAuthResendEmail = \u900f\u904e\u96fb\u5b50\u90f5\u4ef6\u91cd\u65b0\u767c\u9001\u7a0b\u5f0f\u78bc
+twoFactorAuthResendEmailDone = \u4ee3\u78bc\u5df2\u91cd\u65b0\u767c\u9001\u3002
+twoFactorAuthChooseMethod_app = \u6211\u5c07\u4f7f\u7528\u624b\u6a5f\u4e0a\u7684\u8eab\u4efd\u9a57\u8b49\u61c9\u7528\u7a0b\u5f0f
+twoFactorAuthChooseMethod_email = \u5c07\u5b89\u5168\u4ee3\u78bc\u50b3\u9001\u81f3
+twoFactorAuthChooseMethodBack = \u4e0a\u4e00\u6b65
+twoFactorAuthChooseOtherMethod = \u4f7f\u7528\u5176\u4ed6\u65b9\u6cd5
+twoFactorAuthChooseOtherMethodDescription = \u8acb\u9078\u64c7\u4e00\u7a2e\u65b9\u6cd5\u3002
+twoFactorAuthSendTFACodeFailed_app = \u7121\u6cd5\u521d\u59cb\u5316\u5169\u56e0\u7d20\u7a0b\u5f0f\u78bc\u3002\u8acb\u5617\u8a66\u518d\u6b21\u4f7f\u7528\u4f7f\u7528\u8005\u540d\u7a31\u548c\u5bc6\u78bc\u767b\u5165\u3002
+twoFactorAuthSendTFACodeFailed_email = \u7121\u6cd5\u5c07\u5169\u56e0\u7d20\u4ee3\u78bc\u50b3\u9001\u5230\u60a8\u8a2d\u5b9a\u7684\u96fb\u5b50\u90f5\u4ef6\u5730\u5740\u3002\u8acb\u5617\u8a66\u518d\u6b21\u4f7f\u7528\u4f7f\u7528\u8005\u540d\u7a31\u548c\u5bc6\u78bc\u767b\u5165\u3002
 
 goToServers = \u7ba1\u7406\u4f3a\u670d\u5668
 goToGlobalSettings = \u7ba1\u7406\u5168\u57df\u8a2d\u5b9a
