ZCS-14347:HSM / S3 restriction based on license status - changed the error string ERROR_FEATURE_NOT_LICENSED

--- a/WebRoot/messages/ZaMsg_en_GB.properties
+++ b/WebRoot/messages/ZaMsg_en_GB.properties
@@ -2706,4 +2706,4 @@ ERROR_InvalidRPLifetime = The range must be a positive integer.
 ERROR_RPExists = Policy "{0}" already exists.
 multiple_servers = multiple servers
 ERROR_INVALID_FILE_NAME = Invalid file name. Use browse button to select a valid file.
-ERROR_FEATURE_NOT_LICENSED = You are not currently licensed for this feature.<br><br> Please see Configure - Global Settings - License for more information.
+ERROR_FEATURE_NOT_LICENSED = Your license for this feature has expired or is not valid.<br><br> Please see Configure - Global Settings - License for more information.
